fixed gap

--- a/src/app/edb-header/edb-header.component.css
+++ b/src/app/edb-header/edb-header.component.css
@@ -7,7 +7,7 @@
 }
 .header-content{
     display: flex;
-    gap: 1.3rem;
+    gap: 2.3rem;
     align-items: center;
 }
 .edb-logo{
